Avi | fixing spacing between thumbnails

--- a/src/main/resources/assets/app/user/css/mainLandingPage/main.less
+++ b/src/main/resources/assets/app/user/css/mainLandingPage/main.less
@@ -7,8 +7,8 @@
     margin: 24% auto 0;
 
     .thumbnailWrapper {
-        margin-bottom: 250px;
-        margin-top: 100px;
+        margin-bottom: 225px;
+        margin-top: 0px;
     }
 
 }
